--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = raspberrypi
 board = pico
 framework = arduino
-;upload_port = D:\
-;upload_protocol = mbed
 lib_deps = 
-	adafruit/Adafruit BusIO@^1.11.1
+	adafruit/Adafruit BusIO@^1.14.1
 	Wire
+	SPI
+	mikem/RadioHead@^1.120
+	arduino-libraries/Servo@^1.2.0
