--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
-platform = raspberrypi
-board = pico
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = waveshare_rp2040_zero
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit BusIO@^1.14.1
 	Wire
 	SPI
-	arduino-libraries/Servo@^1.2.0
 	nrf24/RF24@^1.4.7
+	arduino-libraries/Servo @ ^1.2.2
+	khoih-prog/RP2040_ISR_Servo @ ^1.1.2
+	adafruit/Adafruit NeoPixel @ ^1.12.3
